--- a/nodesnim/core/exceptions.html
+++ b/nodesnim/core/exceptions.html
@@ -100,10 +100,12 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#SceneError"
-    title="SceneError = object of ValueError"><wbr />Scene<wbr />Error<span class="attachedType"></span></a></li>
+      <li><a class="reference" href="#ResourceError"
+    title="ResourceError {.size: 1.} = object of ValueError"><wbr />Resource<wbr />Error<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#SceneError"
+    title="SceneError {.size: 1.} = object of ValueError"><wbr />Scene<wbr />Error<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#WindowError"
-    title="WindowError = object of ValueError"><wbr />Window<wbr />Error<span class="attachedType"></span></a></li>
+    title="WindowError {.size: 1.} = object of ValueError"><wbr />Window<wbr />Error<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -118,15 +120,22 @@ function main() {
   <div class="section" id="7">
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
+<a id="ResourceError"></a>
+<dt><pre><a href="exceptions.html#ResourceError"><span class="Identifier">ResourceError</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">size</span><span class="Other">:</span> <span class="DecNumber">1</span></span><span class="Other">.}</span></span> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">ValueError</span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="SceneError"></a>
-<dt><pre><a href="exceptions.html#SceneError"><span class="Identifier">SceneError</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">ValueError</span></pre></dt>
+<dt><pre><a href="exceptions.html#SceneError"><span class="Identifier">SceneError</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">size</span><span class="Other">:</span> <span class="DecNumber">1</span></span><span class="Other">.}</span></span> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">ValueError</span></pre></dt>
 <dd>
 
 
 
 </dd>
 <a id="WindowError"></a>
-<dt><pre><a href="exceptions.html#WindowError"><span class="Identifier">WindowError</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">ValueError</span></pre></dt>
+<dt><pre><a href="exceptions.html#WindowError"><span class="Identifier">WindowError</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">size</span><span class="Other">:</span> <span class="DecNumber">1</span></span><span class="Other">.}</span></span> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">ValueError</span></pre></dt>
 <dd>
 
 
@@ -142,7 +151,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-20 16:25:24 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-26 13:10:50 UTC</small>
       </div>
     </div>
   </div>
