--- a/nodesnim/core/scene_builder.html
+++ b/nodesnim/core/scene_builder.html
@@ -120,7 +120,18 @@ function main() {
 <dt><pre><span class="Keyword">macro</span> <a href="#build.m%2Cuntyped"><span class="Identifier">build</span></a><span class="Other">(</span><span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
 <dd>
 
-Builds nodes with YML-like syntax.
+<p>Builds nodes with YML-like syntax.</p>
+<p>Example: .. code-block:: nim</p>
+<blockquote><p><dl class="docutils"><dt>build:</dt>
+<dd><ul class="simple"><li>Scene scene: Node test_node<dl class="docutils"><dt>Label text:</dt>
+<dd>call setText(&quot;Hello, world!&quot;)</dd>
+</dl>
+</li>
+</ul>
+</dd>
+</dl>
+</p></blockquote>
+
 
 </dd>
 
@@ -133,7 +144,7 @@ Builds nodes with YML-like syntax.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-20 16:25:33 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-26 13:10:58 UTC</small>
       </div>
     </div>
   </div>
