--- a/nodesnim/core/stylesheet.html
+++ b/nodesnim/core/stylesheet.html
@@ -124,8 +124,8 @@ function main() {
     title="`[]`(a: StyleSheetRef; key: string): string"><wbr />`[]`<span class="attachedType">StyleSheetRef</span></a></li>
   <li><a class="reference" href="#%5B%5D%3D%2CStyleSheetRef%2Cstring%2Cstring"
     title="`[]=`(a: StyleSheetRef; key, value: string)"><wbr />`[]=`<span class="attachedType">StyleSheetRef</span></a></li>
-  <li><a class="reference" href="#count%2CStyleSheetRef"
-    title="count(a: StyleSheetRef): int"><wbr />count<span class="attachedType">StyleSheetRef</span></a></li>
+  <li><a class="reference" href="#len%2CStyleSheetRef"
+    title="len(a: StyleSheetRef): int"><wbr />len<span class="attachedType">StyleSheetRef</span></a></li>
 
   </ul>
 </li>
@@ -213,8 +213,8 @@ function main() {
 
 
 </dd>
-<a id="count,StyleSheetRef"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#count%2CStyleSheetRef"><span class="Identifier">count</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <a href="stylesheet.html#StyleSheetRef"><span class="Identifier">StyleSheetRef</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="len,StyleSheetRef"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#len%2CStyleSheetRef"><span class="Identifier">len</span></a><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <a href="stylesheet.html#StyleSheetRef"><span class="Identifier">StyleSheetRef</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Returns styles count.
@@ -248,7 +248,7 @@ Translates CSS-like code into StyleSheet.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-20 16:25:33 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-26 13:10:58 UTC</small>
       </div>
     </div>
   </div>
