--- a/nodesnim/graphics/drawable.html
+++ b/nodesnim/graphics/drawable.html
@@ -176,8 +176,8 @@ function main() {
     title="drawablepattern(`type`: untyped): untyped"><wbr />drawablepattern<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#vd.t"
     title="vd()"><wbr />vd<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#recalc.t"
-    title="recalc()"><wbr />recalc<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#recalc.t%2Cbool"
+    title="recalc(shadow: bool = false)"><wbr />recalc<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#draw_template.t%2Cuntyped%2Cuntyped%2Cuntyped%2Cuntyped"
     title="draw_template(drawtype, color, function, secondfunc: untyped): untyped"><wbr />draw_<wbr />template<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#draw_texture_template.t%2Cuntyped%2Cuntyped%2Cuntyped%2Cuntyped"
@@ -391,11 +391,11 @@ Sets a new stylesheet.
 <dt><pre><span class="Keyword">template</span> <a href="#vd.t"><span class="Identifier">vd</span></a><span class="Other">(</span><span class="Other">)</span></pre></dt>
 <dd>
 
-
+void template
 
 </dd>
-<a id="recalc.t"></a>
-<dt><pre><span class="Keyword">template</span> <a href="#recalc.t"><span class="Identifier">recalc</span></a><span class="Other">(</span><span class="Other">)</span></pre></dt>
+<a id="recalc.t,bool"></a>
+<dt><pre><span class="Keyword">template</span> <a href="#recalc.t%2Cbool"><span class="Identifier">recalc</span></a><span class="Other">(</span><span class="Identifier">shadow</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span></pre></dt>
 <dd>
 
 Calculates vertex positions.
@@ -432,7 +432,7 @@ Calculates vertex positions.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-20 16:25:33 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-26 13:10:58 UTC</small>
       </div>
     </div>
   </div>
