--- a/nodesnim/nodes2d/sprite.html
+++ b/nodesnim/nodes2d/sprite.html
@@ -132,8 +132,8 @@ function main() {
     title="duplicate(self: SpriteRef): SpriteRef"><wbr />duplicate<span class="attachedType">SpriteRef</span></a></li>
   <li><a class="reference" href="#getGlobalMousePosition.e%2CSpriteRef"
     title="getGlobalMousePosition(self: SpriteRef): Vector2Obj"><wbr />get<wbr />Global<wbr />Mouse<wbr />Position<span class="attachedType">SpriteRef</span></a></li>
-  <li><a class="reference" href="#loadTexture.e%2CSpriteRef%2Ccstring"
-    title="loadTexture(self: SpriteRef; file: cstring; mode = GL_RGB)"><wbr />load<wbr />Texture<span class="attachedType">SpriteRef</span></a></li>
+  <li><a class="reference" href="#loadTexture.e%2CSpriteRef%2Cstring"
+    title="loadTexture(self: SpriteRef; file: string; mode = GL_RGB)"><wbr />load<wbr />Texture<span class="attachedType">SpriteRef</span></a></li>
   <li><a class="reference" href="#setTexture.e%2CSpriteRef%2CGlTextureObj"
     title="setTexture(self: SpriteRef; texture: GlTextureObj)"><wbr />set<wbr />Texture<span class="attachedType">SpriteRef</span></a></li>
 
@@ -217,8 +217,8 @@ Duplicates Sprite object and create a new Sprite.
 Returns mouse position.
 
 </dd>
-<a id="loadTexture.e,SpriteRef,cstring"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#loadTexture.e%2CSpriteRef%2Ccstring"><span class="Identifier">loadTexture</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="sprite.html#SpriteRef"><span class="Identifier">SpriteRef</span></a><span class="Other">;</span> <span class="Identifier">file</span><span class="Other">:</span> <span class="Identifier">cstring</span><span class="Other">;</span> <span class="Identifier">mode</span> <span class="Other">=</span> <span class="Identifier">GL_RGB</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span>
+<a id="loadTexture.e,SpriteRef,string"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#loadTexture.e%2CSpriteRef%2Cstring"><span class="Identifier">loadTexture</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="sprite.html#SpriteRef"><span class="Identifier">SpriteRef</span></a><span class="Other">;</span> <span class="Identifier">file</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">mode</span> <span class="Other">=</span> <span class="Identifier">GL_RGB</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span>
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
@@ -251,7 +251,7 @@ Returns mouse position.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-20 16:26:28 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-26 13:11:53 UTC</small>
       </div>
     </div>
   </div>
