--- a/nodesnim/nodescontrol/subwindow.html
+++ b/nodesnim/nodescontrol/subwindow.html
@@ -148,8 +148,8 @@ function main() {
     title="setBorderColor(self: SubWindowRef; color: ColorRef)"><wbr />set<wbr />Border<wbr />Color<span class="attachedType">SubWindowRef</span></a></li>
   <li><a class="reference" href="#setIcon.e%2CSubWindowRef%2CGlTextureObj"
     title="setIcon(self: SubWindowRef; gltexture: GlTextureObj)"><wbr />set<wbr />Icon<span class="attachedType">SubWindowRef</span></a></li>
-  <li><a class="reference" href="#setIcon.e%2CSubWindowRef%2Ccstring"
-    title="setIcon(self: SubWindowRef; file: cstring)"><wbr />set<wbr />Icon<span class="attachedType">SubWindowRef</span></a></li>
+  <li><a class="reference" href="#setIcon.e%2CSubWindowRef%2Cstring"
+    title="setIcon(self: SubWindowRef; file: string)"><wbr />set<wbr />Icon<span class="attachedType">SubWindowRef</span></a></li>
   <li><a class="reference" href="#setTitleBarColor.e%2CSubWindowRef%2CColorRef"
     title="setTitleBarColor(self: SubWindowRef; color: ColorRef)"><wbr />set<wbr />Title<wbr />Bar<wbr />Color<span class="attachedType">SubWindowRef</span></a></li>
   <li><a class="reference" href="#setTitle.e%2CSubWindowRef%2Cstring"
@@ -295,8 +295,8 @@ Opens the window. alias of show() method.
 
 
 </dd>
-<a id="setIcon.e,SubWindowRef,cstring"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#setIcon.e%2CSubWindowRef%2Ccstring"><span class="Identifier">setIcon</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="subwindow.html#SubWindowRef"><span class="Identifier">SubWindowRef</span></a><span class="Other">;</span> <span class="Identifier">file</span><span class="Other">:</span> <span class="Identifier">cstring</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="setIcon.e,SubWindowRef,string"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#setIcon.e%2CSubWindowRef%2Cstring"><span class="Identifier">setIcon</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="subwindow.html#SubWindowRef"><span class="Identifier">SubWindowRef</span></a><span class="Other">;</span> <span class="Identifier">file</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Loads icon from file.</p>
@@ -339,7 +339,7 @@ Opens the window. alias of show() method.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-20 16:26:21 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-26 13:11:46 UTC</small>
       </div>
     </div>
   </div>
