--- a/nodesnim/core/animation.html
+++ b/nodesnim/core/animation.html
@@ -174,7 +174,7 @@ function main() {
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
 <a id="Animation,string,float"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#Animation%2Cstring%2Cfloat"><span class="Identifier">Animation</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">speed</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Other">=</span> <span class="FloatNumber">1.0'f32</span><span class="Other">)</span><span class="Other">:</span> <a href="animation.html#AnimationRef"><span class="Identifier">AnimationRef</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span></pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#Animation%2Cstring%2Cfloat"><span class="Identifier">Animation</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">speed</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Other">=</span> <span class="FloatNumber">1.0'f32</span><span class="Other">)</span><span class="Other">:</span> <a href="animation.html#AnimationRef"><span class="Identifier">AnimationRef</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new Animation object.</p>
@@ -188,7 +188,7 @@ function main() {
 
 </dd>
 <a id="addFrame,AnimationRef[T],T"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#addFrame%2CAnimationRef%5BT%5D%2CT"><span class="Identifier">addFrame</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">anim</span><span class="Other">:</span> <a href="animation.html#AnimationRef"><span class="Identifier">AnimationRef</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">frame</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span></pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#addFrame%2CAnimationRef%5BT%5D%2CT"><span class="Identifier">addFrame</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">anim</span><span class="Other">:</span> <a href="animation.html#AnimationRef"><span class="Identifier">AnimationRef</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">frame</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 Adds a new frame in the animation.
@@ -232,7 +232,7 @@ Adds a new frame in the animation.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-20 16:25:33 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-26 13:10:58 UTC</small>
       </div>
     </div>
   </div>
